# mpc-rs

./: .gitignore  Cargo.toml  README.md  anim.md
.cspell/: custom-dictionary-workspace.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
examples/: main.rs  mpc-ukf-commu.rs  mpc-ukf-s.rs  mpc-ukf-x.rs  mppi.rs  mppi2.rs  mppi4-commu.rs  mppi4-non-liner-s.rs  mppi4-non-liner-ukf.rs  mppi4-non-liner.rs  mppi4-ukf-commu.rs  mppi4.rs  mul_mm.rs  na.rs  one-liner-kf.rs  op-en.rs  op-en2.rs  op-mpc-tmp.rs  op-mpc-x-calc-nl.rs  op-mpc-x-calc.rs  op-mpc-x.rs  pid.rs  two-liner-kf.rs  uart.rs  ukf-four.rs  ukf-one.rs  ukf-pen.rs  ukf-pen2.rs  ukf-pen3.rs  ukf-two.rs
scripts/: log-comuu.bash  plot-mpc-ukf.py  plot-mppi.py  plot-pid.py  plot.py
src/: gaussian.rs  kalman-filter.rs  lib.rs  mpc.rs  mppi.rs  packet.rs  ukf.rs  ukf2.rs
