[package]
name = "mpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32.5", features = ["rand"] }
ndarray = "0.15.6"
optimization_engine = "0.9.0"
num = "*"
anyhow = "1.0.86"
rayon = "1.10.0"
csv = "1.3.0"
# simple_logger = "5.0.0"
# log = "0.4.22"
rand = "0.8.5"
rand_distr = "0.4.3"
serialport = "4.4.0"

[profile.release]
lto = "fat"

# codegen-units = 1
# panic = "abort"
# strip = "debuginfo"
