[package]
name = "mpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.33.0", features = ["rand", "rand-no-std"] }
ndarray = "0.15.6"
optimization_engine = "0.9.0"
num = "*"
anyhow = "1.0.86"
rayon = "1.10.0"
csv = "1.3.0"
# simple_logger = "5.0.0"
# log = "0.4.22"
rand = "0.8.5"
rand_distr = "0.4.3"
serialport = "4.4.0"
zerocopy = { version = "0.7.35", features = ["derive"] }
cobs-rs = "1.1.2"
advanced-pid = { version = "0.2.2", features = ["f64"] }

[profile.release]
lto = "fat"

# codegen-units = 1
# panic = "abort"
# strip = "debuginfo"
